2017-09-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Vault.pm: Quit the taperscan only if it is defined

2017-09-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Vault.pm: Fix for tty output, improve usage output
	* server-src/amvault.pl: Fix for message 2500008, quiet, and always
	  quit the taperscan
	* man/xml-source/amvault.8.xml: Improve man page

2017-09-20  Jean-Louis Martineau <JMartineau@carbonite.com>
	* xfer-src/element-glue.c: Fix deadlock
	* server-src/xfer-source-holding.c: Fix deadlock

2017-09-18  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amutil.c (parse_crc): Set to 0 on error
	* perl/Amanda/Restore.pm: Modify a copy of the header

2017-09-15  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/ScanInventory.pm: Call release with need_another flag.
	* perl/Amanda/Changer/single.pm (do_release): eject the tevice if
	  need_another

2017-09-15  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/ScanInventory.pm (after_poll): Set $remove_undef_state
	  if $self->{'chg'}->{'scan-require-update'}

2017-09-12  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/dumper.c:i Do not cancel the shm_ring if the dump-result
	  is 1 (STRANGE)

2017-09-06  Jean-Louis Martineau <JMartineau@carbonite.com>
	* config/amanda/dvdrw-device.m4, config/amanda/ndmp-device.m4,
	  config/amanda/s3-device.m4: Do not include the device if compiled
	  --without-server
	* config/amanda/libs.m4: Do not link with libcurl if no se device or
	  no server
	* config/amanda/s3-device.m4: Re-order

2017-08-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amutil.c: Add comment
	* common-src/local-security.c: Check result of setregid and setreuid

2017-08-25  Jean-Louis Martineau <JMartineau@carbonite.com>
	Patch by Chapman Flack
	* common-src/local-security.c: Check the hostname is local
	* man/xml-source/amanda-auth.7.xml: Document what a localhost is